<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Attendance</string>
    <string name="action_settings">Settings</string>


    <string name="btn_enrol">Enrol (2 times)</string>
    <string name="btn_capture">Capure (1 times)</string>
    <string name="btn_match">Match test</string>
    <string name="activity_home">Home</string>


    <string name="tv_ready"></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="enroll">Enroll</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_history">Attendance History</string>
    <string name="place_finger">place finger</string>
    <string name="first_name">Enter First Name</string>
    <string name="second_name">Enter second name</string>
    <string name="enter_age">Enter age</string>
    <string name="job_position">Enter Job Position</string>
    <string name="enter_id">Enter personal identification number</string>
    <string name="save">Save</string>
    <string name="right_thumb">Place right thumb</string>
    <string name="right_index">Place right index</string>
    <string name="left_thumb">Place left thumb</string>
    <string name="left_index">Place left index</string>
    <string name="name_empty">first name cannot be empty</string>
    <string name="second_name_empty">second name cannot be empty</string>
    <string name="age_empty">age cannot be empty</string>
    <string name="position_empty">job position cannot be empty</string>
    <string name="id_empty">id cannot be empty</string>
    <string name="sign_in_noted">Your sign in has been successfully logged</string>
    <string name="enter_phone">Enter guardian\'s phone number</string>
    <string name="phone_empty">Phone number cannot be empty</string>
    <string name="sign_in_message">has signed in at</string>
    <string name="sign_out_message">has signed out at</string>
    <string name="search_view_hint">Search student</string>
    <string name="user">John Doe</string>
    <string name="age">13</string>
    <string name="school">Makini School</string>
    <string name="grade">6</string>
</resources>
