<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/enrollmentDetailsLayout"
    tools:context="com.UI.EnrollmentDetails.EnrollmentDetailsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/f_name_il"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/s_name_il"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/f_name_il"
        android:layout_marginEnd="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_second_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age_il"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/s_name_il"
        android:layout_marginEnd="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_age" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/job_il"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/age_il"
        android:layout_marginEnd="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_position" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_il"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/job_il"
        android:layout_marginEnd="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_id" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_il"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_il"
        android:layout_marginEnd="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/save"
        android:textColor="@android:color/white" />


</RelativeLayout>