<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:id="@+id/home"
    tools:context="com.UI.Home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="100sp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_primary"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_out"
            android:layout_width="0dp"
            android:layout_height="100sp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_primary"
            android:text="@string/sign_out"
            android:textColor="@android:color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enroll"
            android:layout_width="0dp"
            android:layout_height="100sp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/design_default_color_primary"
            android:text="@string/enroll"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>